<resources>
    <string name="app_name">AllIndiaItr</string>
    <string name="skip_next">Skip/Next</string>
    <string name="slide_title">How it works?</string>
    <string name="step_one">Step 1</string>
    <string name="slide_1_desc">Upload Form 16 and other required documents</string>
    <string name="step_two">Step 2</string>
    <string name="slide_2_desc">A Tax Expert will be assigned to you</string>
    <string name="step_three">Step 3</string>
    <string name="slide_3_desc">Your Tax Expert will file your Income Tax Return</string>
    <string name="send_otp">Send OTP</string>
    <string name="error_message">Something went wrong, it may be due to network issues</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="done">Done</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_refer">Refer &amp; Earn</string>
    <string name="title_more">More</string>
    <string name="new_version_available">New Version Available</string>
    <string name="update_now">Update Now</string>
    <string name="refer_and_earn">Refer a Friend &amp; Earn!</string>
    <string name="refer_now">Refer now</string>
    <string name="start_new_filing">Start New Filing</string>
    <string name="start_filing">Start Filing</string>
    <string name="assessment_year">Assessment Year</string>
    <string name="resolve_tax" translatable="false">Resolve Tax Notice</string>
    <string name="view_details">View Details</string>
    <string name="click_update">Click here to Update</string>
    <string name="or">OR</string>
    <string name="skip">Skip</string>
    <string name="how_it_works">HOW IT WORKS</string>
    <string name="itr_tutorial_upload">Upload/mail Document</string>
    <string name="itr_tutorial_upload_desc">You can either Upload the relevant documents or E-mail the same to us.
    </string>
    <string name="itr_tutorial_ask_expert">Answer Callback from expert</string>
    <string name="itr_tutorial_ask_expert_desc">Our Tax Experts will call you and solve all your Tax Related queries.
    </string>
    <string name="itr_tutorial_completes_filing">Expert Completes e-Filing</string>
    <string name="itr_tutorial_completes_filing_desc">Your ITR will be filed by your assigned Tax Expert.</string>
    <string name="cont">Continue</string>
    <string name="choose_financial_year">Financial Year | Assessment Year</string>
    <string name="year_txt">2019-20 | 2020-21</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">E-mail ID</string>
    <string name="pan_no">PAN Number</string>
    <string name="dob">D.O.B</string>
    <string name="upload_form16_pension">Upload Form 16\nOr\nPension Slip</string>
    <string name="upload_form16_instruction">Kindly ensure that the fields in your Form 16/ Pension Slip are clearly
        visible.
    </string>
    <string name="important_details_father">Father\'s Name
        <i>(as per PAN Card)</i>
    </string>
    <string name="important_details_aadhar">Aadhaar Card Number/ Enrollment ID</string>
    <string name="important_details_currentadd">Current Address</string>
    <string name="important_details_add1">Address Line 1</string>
    <string name="important_details_add2">Address Line 2</string>
    <string name="important_details_state">State</string>
    <string name="important_details_city">City</string>
    <string name="important_details_pin">Pincode</string>
    <string name="upload_aadhar">Upload Aadhaar Card</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="important_details_retry">Retry</string>
    <string name="important_details_delete">Delete</string>
    <string name="bank_details_add_another">Add Another Bank Account</string>
    <string name="bank_details_name">Bank Name</string>
    <string name="bank_details_ifsc">IFSC Code</string>
    <string name="bank_details_acc_no">Account Number</string>
    <string name="bank_details_acc_type">Account Type</string>
    <string name="bank_details_make_primary">Make this my Primary Account.</string>
    <string name="bank_details_make_desc">Tax Refund, if any will be credited to your Primary Bank Account.</string>
    <string name="other_income_int_inc">Interest Income</string>
    <string name="other_income_int_inc_desc">Interest Income from Saving Bank and Post Office deposits.</string>
    <string name="other_income_int_fd_rd">Interest On RD\'s / FD\'s etc.</string>
    <string name="other_income_int_fd_rd_desc">Interest from sweep accounts converted to FDs also specified here.
    </string>
    <string name="other_income_any_other">Any Other Income</string>
    <string name="other_income_any_other_desc">Report any other income which is not part of Income from Salary, House
        Property, Capital Gain or Business and Profession. Gifts can be declared as Income here.
    </string>
    <string name="misc_income">Sources of income selected by you</string>
    <string name="misc_income_select">Select your Turnover/Gross Receipts</string>
    <string name="misc_income_upto_lakhs">Upto 10 Lakhs</string>
    <string name="misc_income_10lakhs">10 to 25 Lakhs</string>
    <string name="misc_income_25lakhs">25 to 50 Lakhs</string>
    <string name="misc_income_50lakhs">Above 50 Lakhs</string>
    <string name="misc_income_desc">We have received your basic details, for more information, our Tax Expert will
        contact you shortly.
    </string>
    <string name="upload_other_tax_expert">Additional Information for Tax Expert</string>
    <string name="upload_other_write_comment">Write a comment here…</string>
    <string name="enter_coupon">Enter your coupon code here</string>
    <string name="apply">Apply</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="original_price">Original Price</string>
    <string name="discount_price">Discount Price</string>
    <string name="gst">GST @18%</string>
    <string name="total_payment">Total</string>
    <string name="gstin_quest">Do you have GSTIN?</string>
    <string name="gstin_desc">If you are registered under GST, please provide your GSTIN to claim Input Tax Credit under
        the GST Regulations.
    </string>
    <string name="gstin">GSTIN*</string>
    <string name="gstin_comp_name">Company / Firm’s Name (as per GSTIN)*</string>
    <string name="gstin_dropdown">State (as per GSTIN)*</string>
    <string name="gstin_comp_add">Company / Firm’s Address (as per GSTIN)*</string>
    <string name="gstin_service_prov">Service Provider’s GSTIN: 06AAGCC7251C2ZY</string>
    <string name="submit">Submit</string>
    <string name="upload_n_any_other_document">Upload\nany other document</string>
    <string name="upload_n_intimation_notice">Upload\nIntimation/Notice</string>
    <string name="skip_submit">Skip/Submit</string>
    <string name="start_new_filing_for_user">Start Filing for New User</string>
    <string name="reply_to_notice">Reply to Notice for New User</string>
    <string name="basic_salary_received">Basic salary received *</string>
    <string name="dearness_allowance">Dearness Allowance (DA)</string>
    <string name="da_received">Dearness Allowance (DA) received</string>
    <string name="hra_received">HRA received *</string>
    <string name="total_rent_paid">Total rent paid *</string>
    <string name="calculate">Calculate</string>
    <string name="hra_question">Do you live in Delhi, Mumbai, Kolkata or Chennai?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calculate_again">Calculate Again</string>
    <string name="print">Print</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Your Name *</string>
    <string name="your_email">Your Email Id *</string>
    <string name="rent_details">Rent Details</string>
    <string name="landlord_name">Landlord Name *</string>
    <string name="landlord_pan">Landlord PAN *
        <i>(e.g. ABCPL1234C)</i>
    </string>
    <string name="rent_paid">Rent Paid Per Month *</string>
    <string name="rent_duration">Rent Duration *</string>
    <string name="warning_note"><b>Note:</b> If you do not e-verify your return within 120 days, it will be considered as invalid return</string>
    <string name="About_Us">Technology is a great enabler as it keeps finding innovative solutions. It becomes more
        effective when it comes loaded with domain expertise. At All India ITR, we blend cutting-edge technology with
        comprehensive knowledge of taxes to find answers to all your tax-related queries; be it e-filing of ITR or
        helping you get GST ready. There are certain features that make us a dependable choice for taxpayers.
        \n\n<b>Infallible Technology</b>\nWe are living in the times where almost every existing business has an app.
        But not all apps are error free. At All India ITR, we have a team of proficient app developers to maintain our
        application and update it as and when required. So, rest assured you won’t face a glitch while using it.
        \n\n<b>Unmatched Expertise</b>\nDespite having a technologically-advance interface, for us, technology is only a
        means to an end, as offering tax solutions to clients tops our priority list. To achieve this, we have a team of
        tax experts which is willing to provide you tax solutions in shortest possible time.
        \n\n<b>Credibility that Built Trust</b>\nWhile revealing their details, taxpayers want to make it sure if the
        service provider is credible enough. As All India ITR is a government authorised intermediary, you can rest
        assured that your details are in safe hands.
        \n\n<b>One-Stop Tax Solutions</b>\nWhile creating the app we have paid great attention to details. We have made
        sure our valued customers shouldn’t walk from pillar to post to find tax solutions. To facilitate them, we have
        Income Tax Calculator, HRA Calculator and Rent Receipt Generator that can be used for free.
    </string>
    <string name="request_callback_title">Need Help?\n Talk to an Expert.</string>
    <string name="need_help" translatable="false">Need Help</string>
    <string name="orderstatus_popup">Congratulations!</string>
    <string name="orderstatus_popup_itr">Your ITR has been Filed successfully</string>
    <string name="orderstatus_popup_ack">Your Acknowledgement Number is:</string>
    <string name="orderstatus_popup_txt">Tell us about your experience with ALL India ITR\nRate Us Now</string>
    <string name="orderstatus_popup_no">No Thanks!</string>
    <string name="ref_earn_add_bank"> Add Your Bank Details for Withdrawal</string>
    <string name="ref_earn_account"> Account Holder\'s Name</string>
    <string name="ref_earn_bank_name"> Bank Name</string>
    <string name="ref_earn_bank_ac_no"> Bank Account Number</string>
    <string name="ref_earn_bank_ifsc"> IFSC Code</string>
    <string name="ref_earn_btn_withdraw"> Withdraw</string>
    <string name="ref_earn_sorry"> Sorry, withdrawal history not available!</string>
    <string name="mainual_formtitle"> Good. Just recheck your imported Summary</string>
    <string name="mainual_form_subtitle"> Here are the key field of your From-16.Please reconfirm and Continue</string>
    <string name="mainual_form_details_sal1">Income from Salary</string>
    <string name="mainual_form_details_house">House Property Income</string>
    <string name="mainual_form_details_deduction">Less:Deduction</string>
    <string name="mainual_form_details_taxable">Total Taxable Income</string>
    <string name="mainual_form_details_tds">Total TDS</string>
</resources>