<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/rating_popup_img"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/orderstatus_popup"
                android:textSize="@dimen/text_size_eighteen"
                android:textStyle="bold"
                android:textColor="@color/lighter_black"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderstatus_popup_itr"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/lighter_black"
                android:textSize="@dimen/text_size_sixteen"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderstatus_popup_ack"
                android:textSize="@dimen/text_size_fourteen"
                android:layout_gravity="center"
                android:textColor="@color/light_grey"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/three"
                    app:cardBackgroundColor="@color/transparencyPrimaryDark"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="@dimen/fifteen"
                    android:layout_marginLeft="@dimen/fifteen"
                    android:layout_gravity="center"
                    app:cardElevation="0dp">

                <TextView
                        android:id="@+id/tv_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="@dimen/text_size_fourteen"
                        android:textColor="@color/colorPrimary"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/orderstatus_popup_txt"
                android:textSize="@dimen/text_size_fourteen"
                android:textColor="@color/light_grey"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_gravity="center">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:stepSize="1" />

                <Button
                    android:id="@+id/button_rate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_fourteen"
                    android:textColor="@color/white"
                    style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>

            <TextView
                android:id="@+id/no_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderstatus_popup_no"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_size_fourteen"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>